fix(desktop): increase keyboard width to prevent squashed keys

--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -103,7 +103,7 @@
     padding-bottom: 20px;
     user-select: none;
     width: 100%;
-    max-width: 500px;
+    max-width: 650px;
     padding-left: 5px;
     padding-right: 5px;
 }
